Change name of vcf file.

--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ ref:
   # Path to the reference genome, ideally as it is provided by the GATK bundle.
   genome: data/ref/genome.chr21.fa
   # Path to any database of known variants, ideally as it is provided by the GATK bundle.
-  known-variants: data/ref/dbsnp.vcf.gz
+  known-variants: data/ref/dbsnp_138.hg19.vcf
 
 filtering:
   # Set to true in order to apply machine learning based recalibration of
